<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="myportfolioapp.app9ation.xyz.myportfolioapp.MainActivity"
    tools:showIn="@layout/activity_main">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_below="@+id/title">
        <Button
          style="@style/ButtonStyleUdacious"
            android:text="@string/spotify_streamer"
            android:id="@+id/spotifyStreamerButton"

            />`
        <Button
            style="@style/ButtonStyleUdacious"
            android:text="@string/scores_app"
            android:id="@+id/scoresAppButton"

            />
        <Button
            style="@style/ButtonStyleUdacious"
            android:text="@string/library_app"
            android:id="@+id/libraryAppButton"
            />
        <Button
            style="@style/ButtonStyleUdacious"
            android:text="@string/build_it_bigger"
            android:id="@+id/buildItBiggerAppButton"
            />
        <Button
            style="@style/ButtonStyleUdacious"
            android:text="@string/xyz_reader"
            android:id="@+id/xyzReaderButton"
            />
        <Button
            style="@style/ButtonStyleUdacious.Pink"
            android:text="@string/capstone_my_own_app"
            android:id="@+id/CapstoneMyOwnAppButton"
            />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/listTitle"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="30dp"/>
</RelativeLayout>
